fix mobile overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC|Josefin+Sans&display=swap');
 
+html , body {
+	overflow: auto!important;
+	max-height:100% !important;
+}
+
 html{
 	--soil:#6E2C00;
 	--water:#3498D8;
